<resources>
    <string name="app_name">QBHousesClient</string>
    <string name="main_title">快 美 运 营 平 台</string>
    <string name="hint_account">账号/手机号</string>
    <string name="hint_pwd">密码</string>
    <string name="login">登 录</string>
    <string name="exit">退 出</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="buy_one">单票</string>
    <string name="buy_one_price">¥8</string>
    <string name="buy_one_price_before">原价¥10</string>
    <string name="buy_twenty">20张</string>
    <string name="buy_twenty_price">¥140</string>
    <string name="yuan">¥</string>
    <string name="want_recharge">我要充值</string>
    <string name="nickname">昵称</string>
    <string name="max_count_ticket">您共有 %1$d 张票劵</string>
    <string name="max_count_machine">您共有机器数： %1$d 台</string>
    <string name="normal_machine">正常： %1$d </string>
    <string name="offline_machine">离线： %1$d 台</string>
    <string name="error_machine">故障： %1$d 台</string>
    <string name="used_ticket">已使用 %1$d 张</string>
    <string name="unused_ticket">未使用 %1$d 张</string>
    <string name="recharge_result">本次购买 %1$d 张票，充值金额 %1$d 元</string>
    <string name="ticket_id">票劵编号</string>
    <string name="state">状态</string>
    <string name="check_record">查看充值记录</string>
    <string name="check_ticket">查看我的票劵</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="input_pwd">请输入您的新密码</string>
    <string name="input_pwd_again">请确定您的新密码</string>
    <string name="machine_id">机器编号： %1$d </string>
    <string name="machine_id_txt">机器编号</string>
    <string name="machine_type">机器类型：</string>
    <string name="total_turnover">合计营业额</string>
    <string name="sum_turnover">总营业额:</string>
    <string name="sum_income">总收入:</string>
    <string name="count_machine">共 %1$d 台</string>
    <string name="province">省</string>
    <string name="area">地区</string>
    <string name="city">市</string>
    <string name="county">县/区</string>
    <string name="type">型号</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="drawer_open">打开菜单</string>
    <string name="drawer_close">关闭菜单</string>
    <string name="main">首   页</string>
    <string name="ticket">票   劵</string>
    <string name="recharge">充值记录</string>
    <string name="personal">个人中心</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
</resources>
