<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/app_base_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="224px"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="618px"
            android:layout_height="134px"
            android:layout_marginStart="10px"
            android:background="@drawable/bg_black">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/machine_id_txt"
                android:paddingLeft="90px"/>

            <ImageView
                android:layout_width="110px"
                android:layout_height="match_parent"
                android:padding="20px"
                android:src="@drawable/ticket_search"/>
        </LinearLayout>

        <TextView
            android:layout_width="268px"
            android:layout_height="138px"
            android:layout_marginStart="30px"
            android:background="@drawable/bg_black"
            android:hint="@string/start_date"
            android:textSize="55px"
            android:gravity="center"/>
        
        <View
            android:layout_width="35px"
            android:layout_height="4px"
            android:background="@color/black"
            android:layout_marginStart="20px"/>
        <TextView
            android:layout_width="268px"
            android:layout_height="138px"
            android:layout_marginStart="20px"
            android:background="@drawable/bg_black"
            android:hint="@string/end_date"
            android:textSize="55px"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>