<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/app_base_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:layout_width="890px"
                android:layout_height="166px"
                android:layout_marginStart="68px"
                android:background="@drawable/bg_red_radius5"
                android:hint="@string/machine_id_txt"
                android:paddingLeft="94px"/>

            <ImageView
                android:layout_width="228px"
                android:layout_height="166px"
                android:layout_marginStart="56px"
                android:src="@drawable/bg_btn_search"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="156px"
            >

            <RelativeLayout
                android:layout_width="342px"
                android:layout_height="142px"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="62px"
                android:background="@drawable/bg_red_radius5">

                <TextView
                    android:id="@+id/province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/area"
                    android:textSize="58px"/>

                <ImageView
                    android:layout_width="40px"
                    android:layout_height="20px"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16px"
                    android:layout_toEndOf="@+id/province"
                    android:src="@drawable/arrow_03"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="342px"
                android:layout_height="142px"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_red_radius5">

                <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/state"
                    android:textSize="58px"/>

                <ImageView
                    android:layout_width="40px"
                    android:layout_height="20px"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16px"
                    android:layout_toEndOf="@+id/state"
                    android:src="@drawable/arrow_03"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="342px"
                android:layout_height="142px"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="41px"
                android:background="@drawable/bg_red_radius5">

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/type"
                    android:textSize="58px"/>

                <ImageView
                    android:layout_width="40px"
                    android:layout_height="20px"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16px"
                    android:layout_toEndOf="@+id/type"
                    android:src="@drawable/arrow_03"/>

            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:background="@color/gray_0"/>

        <com.aigestudio.wheelpicker.widgets.WheelAreaPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20px"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="@string/sum_turnover"
                android:textColor="@color/black"
                android:textSize="38px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="@string/yuan"
                android:textColor="@color/red_0"
                android:textSize="38px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16px"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="68,0021"
                android:textColor="@color/red_0"
                android:textSize="58px"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="48px"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="@string/sum_income"
                android:textColor="@color/black"
                android:textSize="38px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="@string/yuan"
                android:textColor="@color/red_0"
                android:textSize="38px"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16px"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="68,0021"
                android:textColor="@color/red_0"
                android:textSize="58px"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="48px"
                android:gravity="bottom"
                android:paddingBottom="15px"
                android:text="@string/count_machine"
                android:textColor="@color/black"
                android:textSize="48px"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/slide_menu"/>
</android.support.v4.widget.DrawerLayout>