<?xml version="1.0" encoding="utf-8"?>
<!-- 账号注册 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/app_base_title"/>

    <LinearLayout
        android:layout_width="1120px"
        android:layout_height="175px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110px"
        android:background="@drawable/shape_edit_stroke"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="75px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40px"
            android:src="@drawable/qb_login_phone"/>

        <View
            android:layout_width="0.5px"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:background="@color/gray_2"/>

        <EditText
            android:id="@+id/login_register_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="28px"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/input_phone"
            android:textSize="40px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="1120px"
        android:layout_height="175px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="680px"
            android:layout_height="160px"
            android:background="@drawable/shape_edit_stroke"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_register_yzm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="13px"
                android:background="@null"
                android:hint="@string/input_captcha"
                android:textSize="40px"/>
        </LinearLayout>

        <View
            android:layout_width="20px"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/login_register_getpwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_error"
            android:clickable="true"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@android:color/white"
            android:textSize="40px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="1120px"
        android:layout_height="175px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        android:background="@drawable/shape_edit_stroke"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40px"
            android:src="@drawable/qb_login_secret"/>

        <View
            android:layout_width="0.5px"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:background="@color/gray_2"/>

        <EditText
            android:id="@+id/login_register_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13px"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:textSize="40px"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="1120px"
        android:layout_height="175px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20px"
        android:background="@drawable/shape_edit_stroke"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="88px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40px"
            android:src="@drawable/qb_login_secret"/>

        <View
            android:layout_width="0.5px"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:background="@color/gray_2"/>

        <EditText
            android:id="@+id/login_register_repwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="13px"
            android:background="@null"
            android:hint="@string/input_pwd_again"
            android:textSize="40px"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_register_complete"
        android:layout_width="920px"
        android:layout_height="132px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="82px"
        android:background="@drawable/bg_error"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="49px"/>

</LinearLayout>